Changes from java17 openrewrite recipe